# magnetoplasmadynamic-thruster

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
templates/: index.html.hbs
